# study

./: CMakeLists.txt  main.cpp  nearest.cpp  twolineral.cpp
